# mobit_challenge

./: .gitignore  README.md  part_1.py  part_2.py  part_3.py  pyproject.toml  requirements.txt
results/: convnext_t_results.csv  efficientnetv2_s_results.csv  resnet50_results.csv
results/parte_3/: convnext_t_results.csv  efficientnetv2_s_results.csv  resnet50_results.csv
results/parte_3/ft/: convnext_t_results.csv  efficientnetv2_s_results.csv  resnet50_results.csv
results/parte_3/tl/: convnext_t_results.csv  efficientnetv2_s_results.csv  resnet50_results.csv
src/: analyses.py  class_weight.py  dataset.py  eval.py  models.py  train.py  transforms.py
utils/: Analyses.py  BMWDataset.py  data.py  metrics.py
utils/parte_1/: posprocessing.py  preprocess.py  process.py  results.py  views.py
utils/parte_2/: views.py
utils/parte_3/: metrics.py
